# alt

./: CMakeLists.txt  README.md
doc/script/: Abstract Class.md  AbstractClass.md  AltroNode.md  ArgumentPassing.md  ArgumentsPassing  Array.md  Assignment.md  BuiltinClasses..md  Class.md  ClassMember.md  Constructor.md  ControlFlow.md  ConvertibleTypes.md  Declarations.md  Dictionary.md  Expressions.md  ExternalClass.md  FreeConstructor.md  FreeFunctor.md  Function.md  FunctionClass.md  FunctionType.md  Functor.md  IncorporealClass.md  Inheritance.md  InheritanceTree.md  InterfaceClass.md  KindsOfClasses.md  LibMath.md  LibSys.md  Literals.md  Locale.md  LvalueExpression.md  Math.md  MemberClass.md  Object.md  Operators.md  OutputFormatting.md  Ownership.md  ParametricClass.md  (+35 more)
src/: CMakeLists.txt
src/util/: CMakeLists.txt  defs.h
src/util/ipc/: AtomicData.h  Mutex.h  Semaphore.h  SharedMemory.cpp  SharedMemory.h  Thread.cpp  Thread.h
src/util/net/: DNS.cpp  DNS.h  IPAddress.cpp  IPAddress.h  MsgRateCounter.h  Socket.cpp  Socket.h  SocketAddress.cpp  SocketAddress.h  SocketStream.cpp  SocketStream.h  StreamConnection.cpp  StreamConnection.h
src/util/numeric/: FixedPointNumber.h  Intrinsics.cpp  Intrinsics.h
src/util/storage/: Allocator.cpp  Allocator.h  CircularQueue.cpp  CircularQueue.h  CoQueue.cpp  CoQueue.h  CollectableVector.h  DoubleHash.h  FixedMemPool.cpp  FixedMemPool.h  LinkedList.cpp  LinkedList.h  NamedTreeNode.h  PooledHash.h  Queue.cpp  Queue.h  Range.h  RingBuffer.cpp  RingBuffer.h  SharedPooledHash.h  SideBuckets.h  SortedArray.h  SortedBuckets.h  StringHashMap.h  TranslationMap.h  TreeNode.cpp  TreeNode.h
src/util/string/: JsonParser.cpp  JsonParser.h  StrBuffer.h  StrPool.cpp  StrPool.h  StrPrint.h  StrScan.cpp  StrScan.h  StrUtils.cpp  StrUtils.h  StreamParser.cpp  StreamParser.h  XmlParser.cpp  XmlParser.h
src/util/sysinfo/: Platform.h  SysConfig.cpp  SysConfig.h
src/util/system/: EventPoller.cpp  EventPoller.h  MsgPoller.h  OS.cpp  OS.h  Platform.h  Reactor.cpp  Reactor.h  SysError.h  TimerQueue.cpp  TimerQueue.h
src/util/types/: Clock.cpp  Clock.h  Enum.cpp  Enum.h  EnumSet.h  OpaquePointer.h  RefCount.h  Singleton.h  Span.h  TemplateHelper.h  ValueWrapper.h
src/util/unittest/: CMakeLists.txt  CoQueueTest.cpp  EnumTest.cpp  LinkedListTest.cpp  MemPoolTest.cpp  NamedTreeNodeTest.cpp  PooledHashTest.cpp  PooledLinkListTest.cpp  QueueTest.cpp  RingBufferTest.cpp  SortedArrayTest.cpp  StrScanTest.cpp  StringHashMapTest.cpp  TimerQueueTest.cpp  TreeNodeTest.cpp
